# LogAnalyzerCrew

./: README.md  log.csv  log_300.csv  pyproject.toml  report.md  trained_agents_data.pkl  training_data.pkl
src/LogAnalyzer/: crew.py  main.py
src/LogAnalyzer/config/: agents.yaml  tasks.yaml
src/LogAnalyzer/tools/: readcsv.py
