[tool.poetry]
name = "loganalyzer"
version = "0.1.0"
description = "loganalyzer using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.55.2,<1.0.0" }
langchain = ">=0.0.236"  
langchain-community = ">=0.0.3"


[tool.poetry.scripts]
loganalyzer = "loganalyzer.main:run"
run_crew = "loganalyzer.main:run"
train = "loganalyzer.main:train"
replay = "loganalyzer.main:replay"
test = "loganalyzer.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
