[project]
name = "loganalyzer"
version = "0.1.0"
description = "loganalyzer using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.55.2,<1.0.0",
    "langchain>=0.0.236",
    "langchain-community>=0.0.3",
]

[project.scripts]
loganalyzer = "loganalyzer.main:run"
run_crew = "loganalyzer.main:run"
train = "loganalyzer.main:train"
replay = "loganalyzer.main:replay"
test = "loganalyzer.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
