[project]
name = "LogAnalyzer"
version = "0.1.0"
description = "LogAnalyzer using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.55.2,<1.0.0",
    "langchain>=0.0.236",
    "langchain-community>=0.0.3",
]

[project.scripts]
loganalyzer = "LogAnalyzer.main:run"
run_crew = "LogAnalyzer.main:run"
train = "LogAnalyzer.main:train"
replay = "LogAnalyzer.main:replay"
test = "LogAnalyzer.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
